--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <h1>Welcome</h1>
-  <a href="emulator.html">emulator</a>
+  <a href="emulator.html">emulator</a><b/>
+  <a href="spelling.html">spelling</a>
   <script src="/scripts/main.js"></script>
 </body>
 </html>
